--- a/index.html
+++ b/index.html
@@ -2,29 +2,37 @@
 <html>
 
 <head>
-  <title>Unit 2 Starter Code, Option 2</title>
+  <title>Michael Khodzhyaev</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-  <h1>Title of Website</h1>
+  <h1>Web name</h1>
   <br>
   <!-- Change the image below to one you want to use. -->
-  <img src="https://i.ibb.co/b13ZBzn/placeholder.jpg">
+  <img src="https://dynaimage.cdn.cnn.com/cnn/digital-images/org/652fe68b-6ff2-418f-bcb0-07e01dd06b28.jpeg">
   <h2>Place general information about your topic here.</h2>
+
   <div class="section-container">
-    <div class="section">
-      <h2>Section 1</h2>
-      <!-- Add text, images, and links for section 1 below. -->
+ <div class="section">
+      <h2>Background</h2>
+      <!-- Add text, images, and links for section 1 below. -->                                          <img class = "img1" src="">
+       <p class= "Background">The Israeli-Palestinian conflict dates back to the end of the nineteenth century. In 1947, the United Nations adopted Resolution 181, known as the Partition Plan, which sought to divide the British Mandate of Palestine into Arab and Jewish states. On May 14, 1948, the State of Israel was created, sparking the first Arab-Israeli War. The war ended in 1949 with Israel’s victory, but 750,000 Palestinians were displaced, and the territory was divided into 3 parts: the State of Israel, the West Bank, and the Gaza Strip.</p>
+  <br>
+   <p>Source:</p>
+   <a href="https://www.cfr.org/global-conflict-tracker/conflict/israeli-palestinian-conflict">Global Conflict Tracker: Israeli-Palestinian Conflict</a>
+</div>
+    <!--Source: https://www.cfr.org/global-conflict-tracker/conflict/israeli-palestinian-conflict-->
 
-    </div>
     <div class="section">
-      <h2>Section 2</h2>
+      <h2></h2>
       <!-- Add text, images, and links for section 2 below. -->
-
+       <img class = "img2" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTsX_jrBmdkMbVCh9R_mr66F3mzJI1HKFsVdg&usqp=CAU">
     </div>
+
+    
     <div class="section">
-      <h2>Section 3</h2>
+      <h2>The Start</h2>
       <!-- Add text, images, and links for section 3 below. -->
 
     </div>
