--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Michael Khodzhyaev</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="style.css" rel="stylesheet" type="text/css"/>
 </head>
 
 <body>
@@ -15,9 +15,9 @@
 
   <div class="section-container">
  <div class="section">
-      <h2>Background</h2>
-      <!-- Add text, images, and links for section 1 below. -->                                          <img class = "img1" src="">
-       <p class= "Background">The Israeli-Palestinian conflict dates back to the end of the nineteenth century. In 1947, the United Nations adopted Resolution 181, known as the Partition Plan, which sought to divide the British Mandate of Palestine into Arab and Jewish states. On May 14, 1948, the State of Israel was created, sparking the first Arab-Israeli War. The war ended in 1949 with Israel’s victory, but 750,000 Palestinians were displaced, and the territory was divided into 3 parts: the State of Israel, the West Bank, and the Gaza Strip.</p>
+      <h1>Background</h1>
+      <!-- Add text, images, and links for section 1 below. -->                                          
+       <p class= "Text">The Israeli-Palestinian conflict dates back to the end of the nineteenth century. In 1947, the United Nations adopted Resolution 181, known as the Partition Plan, which sought to divide the British Mandate of Palestine into Arab and Jewish states. On May 14, 1948, the State of Israel was created, sparking the first Arab-Israeli War. The war ended in 1949 with Israel’s victory, but 750,000 Palestinians were displaced, and the territory was divided into 3 parts: the State of Israel, the West Bank, and the Gaza Strip.</p>
   <br>
    <p>Source:</p>
    <a href="https://www.cfr.org/global-conflict-tracker/conflict/israeli-palestinian-conflict">Global Conflict Tracker: Israeli-Palestinian Conflict</a>
@@ -25,16 +25,25 @@
     <!--Source: https://www.cfr.org/global-conflict-tracker/conflict/israeli-palestinian-conflict-->
 
     <div class="section">
-      <h2></h2>
+      <h1>The Start</h1>
       <!-- Add text, images, and links for section 2 below. -->
-       <img class = "img2" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTsX_jrBmdkMbVCh9R_mr66F3mzJI1HKFsVdg&usqp=CAU">
+       <img class= "img2" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTsX_jrBmdkMbVCh9R_mr66F3mzJI1HKFsVdg&usqp=CAU">
+      <p class= "Text">On October 7, 2023, the Palestinian Sunni Islamist group Hamas (a U.S.-designated foreign terrorist organization, or FTO) led surprise attacks against Israel from the Gaza Strip by land, sea, and air. The assault came on a Jewish holiday, 50 years after the
+      Egypt-Syria surprise attack that sparked the 1973 Yom Kippur War. The attacks’ scope
+      and lethality against Israel have no precedent in the 16 years Hamas has controlled
+      Gaza, and the nature of the violence stunned Israelis.</p>
+      <br>
+      <p>Source:</p>
+      <a href="https://crsreports.congress.gov/product/pdf/R/R47754#:~:text=On%20October%207%2C%202023%2C%20the,land%2C%20sea%2C%20and%20air.">Israel and Hamas October 2023 Conflict:
+       Frequently Asked Questions (FAQs)</a>
     </div>
-
-    
     <div class="section">
-      <h2>The Start</h2>
-      <!-- Add text, images, and links for section 3 below. -->
-
+      <h1>Currently Happening</h1>
+      <p class= "Text">Mediators in the Israel-Hamas war are working to win another extension of a six-day-old pause in fighting. Israel says it's willing to continue the pause if Hamas keeps releasing hostages. Hamas also claimed the youngest hostage was killed in an Israeli bombing before the ceasefire. The Israeli military said it's investigating the claim.</p>
+      <br>
+       <p>Source:</p>
+       <a href="https://www.pbs.org/newshour/show/former-state-dept-official-on-whats-next-in-israel-hamas-conflict">Former State Dept. official on what’s next in Israel-Hamas conflict</a>
+      
     </div>
   </div>
 </body>
